# slingsim

./: .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md
docs/: Doxyfile
libs/: CMakeLists.txt
libs/include/: CMakeLists.txt
libs/include/geometry/: CMakeLists.txt  basic-math.h  constants.h  types-2d.h  types.h
libs/include/geometry/collision/: border.h  object.h
libs/include/geometry/transformation/: misc.h  rotation.h  scale.h  translation.h
libs/include/graphics/: CMakeLists.txt  draw.h  render.h  utils.h
libs/include/input/: CMakeLists.txt  events.h  keyboard.h  mouse.h  remap-utils.h
libs/include/inputhandler/: CMakeLists.txt  events.h  keyboard.h  mouse.h
libs/include/libsample/: CMakeLists.txt  MathUtils.h
libs/include/physics/: CMakeLists.txt  constants.h  mechanics.h  types.h  utils.h
libs/include/random/: CMakeLists.txt  random.h
libs/src/: CMakeLists.txt
libs/src/geometry/: CMakeLists.txt  basic-math.cpp
libs/src/geometry/collision/: border.cpp  object.cpp
libs/src/geometry/transformation/: misc.cpp  rotation.cpp  scale.cpp  translation.cpp
libs/src/graphics/: CMakeLists.txt  draw.cpp  render.cpp
libs/src/input/: CMakeLists.txt  keyboard.cpp  mouse.cpp  remap-utils.cpp
libs/src/inputhandler/: CMakeLists.txt  keyboard.cpp  mouse.cpp
libs/src/libsample/: CMakeLists.txt  MathUtils.cpp
libs/src/physics/: CMakeLists.txt  mechanics.cpp
libs/src/random/: CMakeLists.txt  random.cpp
src/: CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  game-settings.h  game.cpp  main.cpp  random.cpp
src/config/: game-config.cpp  game-config.h  simulation.cpp  simulation.h
src/database/: InputDb.cpp  InputDb.h  Scene.cpp  Scene.h
src/engine/: Engine.cpp  Engine.h  Model.cpp  Model.h  Shader.cpp  Shader.h
src/engine/shaders/: frag.frag  vertex.vert
src/entity/: Ball.cpp  Ball.h  IEntity.h  IMovable.h  Particle.cpp  Particle.h  Planetes.cpp  Planetes.h  Portal.cpp  Portal.h  Seesaw.cpp  Seesaw.h
src/game-of-life/: GameOfLife.cpp  GameOfLife.h  game.cpp
src/mouse/: MouseState.h
src/scene/: Scene.cpp  Scene.h
tests/: CMakeLists.txt
tests/geometry/: CMakeLists.txt  comparators.h  unit_Collision.cpp  unit_Transformation.cpp  unit_basicmath.cpp
tests/libsample/: CMakeLists.txt  unit_MathUtils.cpp
tools/: pre-commit.sh
tools/os-settings/Unix/: dependencies.cmake  settings.cmake
tools/os-settings/Windows/: dependencies.cmake  settings.cmake
